# autoware.universe

.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml  check-build-depends.yaml
common/osqp_interface/src/: osqp_interface.cpp
control/autoware_control_toolbox/: CMakeLists.txt  package.xml
control/autoware_control_toolbox/include/: autoware_control_toolbox.hpp
control/autoware_control_toolbox/include/control/: state_space.hpp  tf_algebra.hpp
control/autoware_control_toolbox/include/splines/: bspline_interpolator_templated.hpp  bsplines_interpolator.hpp  bsplines_smoother.hpp  interpolating_spline_pcg.hpp
control/autoware_control_toolbox/include/utils_act/: act_utils.hpp  act_utils_eigen.hpp  transfer_functions.hpp
control/autoware_control_toolbox/src/control/: act_signal_builder.cpp  balance.cpp  state_space.cpp  tf_algebra.cpp  transfer_functions.cpp
control/autoware_control_toolbox/src/splines/: bspline_interpolator_templated.cpp  bsplines_interpolator.cpp  bsplines_smoother.cpp  interpolating_spline_pcg.cpp
control/autoware_control_toolbox/src/utils_act/: act_utils.cpp  act_utils_eigen.cpp  state_space.cpp  timekeep.cpp  writetopath.cpp
control/autoware_control_toolbox/usage_examples/control/: main_tf2ss.cpp
control/autoware_control_toolbox/usage_examples/splines/: main_bspline_interpolator.cpp  main_bspline_interpolator_templated.cpp  main_bspline_smoother.cpp  main_spline_eigen_pcg.cpp
control/communication_delay_compensator/: .gitignore  CMakeLists.txt  package.xml
control/communication_delay_compensator/include/: communication_delay_compensator_core.hpp  communication_delay_compensator_node.hpp  qfilters.hpp
control/communication_delay_compensator/include/adaptive_parameter_estimators/: adaptive_parameter_estimation.hpp
control/communication_delay_compensator/include/integration/: integrate_eigen_states.hpp
control/communication_delay_compensator/include/node_denifitions/: node_definitions.hpp
control/communication_delay_compensator/include/utils_delay_observer/: delay_compensation_utils.hpp
control/communication_delay_compensator/include/vehicle_models/: vehicle_definitions.hpp  vehicle_kinematic_error_model.hpp
control/communication_delay_compensator/launch/: communication_delay_compensator.launch.xml
control/communication_delay_compensator/param/: communication_delay_compensator.param.yaml
control/communication_delay_compensator/plot/: a00_compensator_plots.xml  a01_compensator_plots.xml  compensator_plots.xml
control/communication_delay_compensator/src/: communication_delay_compensator_core.cpp  communication_delay_compensator_node.cpp
control/communication_delay_compensator/src/adaptive_parameter_estimators/: adaptive_parameter_estimation.cpp
control/communication_delay_compensator/src/vehicle_models/: vehicle_kinematic_error_model.cpp
control/communication_delay_compensator/test/: cdc_node_tests.cpp
control/communication_delay_compensator/usage_examples/: main_delay_compensator.cpp  main_delay_compensator_with_vehicle.cpp  main_polymorphisim.cpp  main_qfilter_simulation.cpp  main_vehicle_simulation.cpp
control/delay_compensation/: CMakeLists.txt  package.xml
control/delay_compensation/include/: delay_compensator.hpp  delay_compensator_core.hpp  delay_compensator_node.hpp  delay_observer.hpp  qfilters.hpp  visibility_control.hpp
control/delay_compensation/include/integration/: integrate_eigen_states.hpp
control/delay_compensation/include/utils_delay_observer/: delay_compensation_utils.hpp
control/delay_compensation/include/vehicle_models/: vehicle_definitions.hpp  vehicle_kinematic_error_model.hpp
control/delay_compensation/python_analysis/: a0_analyze_vehicle_sim_inputs.py  a3_analyze_compensator_sim_results.py  a4_analyze_compensator_for_ey_results.py
control/delay_compensation/src/: delay_compensator_core.cpp  delay_compensator_node.cpp  delay_observer.cpp  qfilters.cpp
control/delay_compensation/src/utils_delay_observer/: delay_compensation_utils.cpp
control/delay_compensation/src/vehicle_models/: vehicle_kinematic_error_model.cpp
control/delay_compensation/usage_examples/: main_delay_compensator.cpp  main_delay_compensator_with_vehicle.cpp  main_delay_observer.cpp  main_dummy_signal.cpp  main_ode.cpp  main_polymorphisim.cpp  main_qfilter_simulation.cpp  main_test_classes.cpp  main_vehicle_simulation.cpp
control/first_order_param_identifier/: .gitignore  CMakeLists.txt  package.xml
control/first_order_param_identifier/config/: estimated_params.xml
control/first_order_param_identifier/include/: node_definitions.hpp  param_id_core.hpp  param_id_node.hpp
control/first_order_param_identifier/launch/: first_order_param_identifier.launch.xml
control/first_order_param_identifier/param/: first_order_param_identifier.param.yaml
control/first_order_param_identifier/src/: param_id_core.cpp  param_id_node.cpp
control/mpc_nonlinear/: CMakeLists.txt  README.md  package.xml
control/mpc_nonlinear/config/: mpc_nonlinear.param.yaml  plot_juggler.xml
control/mpc_nonlinear/launch/: mpc_nonlinear.launch.xml
control/trajectory_follower/: CMakeLists.txt  package.xml
control/trajectory_follower/include/input_library/: input_lib.hpp
control/trajectory_follower/include/trajectory_follower/: mpc.hpp  mpc_lateral_controller.hpp
control/trajectory_follower/include/trajectory_follower/sysid_steering_input_generator/: sysid_steering_input_generator.hpp
control/trajectory_follower/params/: sysid.params.yaml
control/trajectory_follower/plots/: inputs_plots.xml
control/trajectory_follower/src/: mpc.cpp
control/trajectory_follower/src/input_library/: input_lib.cpp
control/trajectory_follower/src/sysid_steering_input_generator/: sysid_steering_input_generator.cpp
control/trajectory_follower/src/vehicle_model/: vehicle_model_bicycle_kinematics.cpp
control/trajectory_follower/test/: test_mpc.cpp
planning/motion_velocity_smoother/: CMakeLists.txt  package.xml
planning/obstacle_avoidance_planner/: README.md
simulator/simple_planning_simulator/: CMakeLists.txt  package.xml
(+112 files in other folders)
