<?xml version="1.0"?>
<package format="2">
    <name>delay_compensation</name>
    <version>0.1.0</version>
    <description>The Communication Delay Observer Based Compensator Package</description>
    <maintainer email="ali.boyali@tier4.jp">Ali Boyali</maintainer>
    <author email="boyali@gmail.com">Ali Boyali</author>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>vehicle_info_util</depend>
    <depend>autoware_control_toolbox</depend>
    <depend>rclcpp_components</depend>

    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
